added login + fixed home + user/admin page components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,19 @@
-<!-- <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-</header> -->
-
 <!-- <header id="myHeader" class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"> -->
-<header id="myHeader" [ngClass]="{'d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom' : true, 'sticky' : isSticky}">
+<header id="myHeader" *ngIf="this.router.url !== '/login'" [ngClass]="{'d-flex flex-wrap align-items-center left-content-center left-content-md-between py-3 mb-4 border-bottom' : true, 'sticky' : isSticky}">
   <div id="logo-div">
     <img src="assets/sources/logo.svg" width="120" height="50" [routerLink]='["/chisiamo"]'>
   </div>
   
-  <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-  </a>
-  
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+  <div class="my_margin_left">
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-left mb-md-0">
       <li><a [routerLink]='["/chisiamo"]' class="nav-link px-2 link-dark">Chi siamo</a></li>
       <li><a [routerLink]='["/prodottivita"]' class="nav-link px-2 link-dark">Prodotti vita</a></li>
     </ul>
-  
+  </div> 
   
 
   <div class="col-md-3 text-end">
-    <button type="button" class="btn btn-outline-primary me-2">Login</button>
+    <button type="button" (click)="redirection()" class="btn btn-outline-primary me-2">Login</button>
   </div>
 </header>
 
