--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="modal-header p-5 pb-4 border-bottom-0">
           <!-- <h5 class="modal-title">Modal title</h5> -->
           <h2 class="fw-bold mb-0">Effettua l'accesso</h2>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" [routerLink]="'/home'" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
   
         <div class="modal-body p-5 pt-0">
@@ -18,12 +18,11 @@
               <label for="floatingPassword">Password</label>
             </div>
             <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit" (click)="verifyUser()">Accedi</button>
-            <small class="text-muted access-denied" *ngIf="this.isPresent==false&&this.loginPressed==true">Utente non registrato. Clicca su registrati.</small>
-            <small class="text-muted access-denied" *ngIf="this.passwordCorrect==false&&this.loginPressed==true&&this.isPresent==true">Password errata</small>
+            <small class="text-muted" class="access-denied" *ngIf="this.isPresent==false&&this.loginPressed==true">Utente non registrato. Clicca su registrati.</small>
+            <small class="text-muted" class="access-denied" *ngIf="this.passwordCorrect==false&&this.loginPressed==true&&this.isPresent==true">Password errata</small>
             <hr class="my-4">
             <h2 class="fs-5 fw-bold mb-3">Oppure registrati</h2>
-            <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
-              <svg class="bi me-1" width="16" height="16"><use xlink:href="#facebook"></use></svg>
+            <button [routerLink]="'/registrati'" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
               Registrati
             </button>
           </form>
