riallineamento con matteo per bordelli

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,10 +27,11 @@
     </a>
     <span class="mb-3 mb-md-0 text-muted">© 2022 Company, Inc</span>
   </div>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-    <li class="ms-3"><a class="text-muted" href="#"><i class="fab fa-instagram"></i></a></li>
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+    <li class="ms-3"><a href="#" class="fa fa-facebook"></a></li>
+    <li class="ms-3"><a href="#" class="fa fa-instagram"></a></li>
+    <li class="ms-3"><a href="#" class="fa fa-twitter"></a></li>
+    <li class="ms-3"><a href="#" class="fa fa-linkedin"></a></li>
   </ul>
 </footer>
