--- a/src/app/prodottivita/prodottivita.component.html
+++ b/src/app/prodottivita/prodottivita.component.html
@@ -1,10 +1,29 @@
-<!-- <div style="text-align:center">
-    <h2>
-        Country list from local json file...
-    </h2>
-    <ul *ngFor="let item of userList">
-       <li>
-          <h3>Email :{{item.username}}, Password: {{item.password}}</h3>
-       </li>
-    </ul>
-</div> -->
+<h1 style="color:rgb(24, 94, 148); text-align: center;">I nostri prodotti vita</h1>
+<br>
+<br>
+<div class="card-group">
+    <div class="card">
+      <img class="card-img-top" src="assets/sources/pvita3.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Valore Vita Reale</h5>
+        <p class="card-text">Per garantire un capitale e un tenore di vita inalterato ai tuoi cari, nell'eventualità della tua prematura scomparsa.</p>
+        <button type="button" class="btn btn-primary btn-sm">Scopri di più</button>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets/sources/pvita2.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Vita Famiglia</h5>
+        <p class="card-text">La tua famiglia va protetta dai gravi eventi, quelli che cambiano la vita. Con la polizza Family Care tuteli la stabilità economica tua e dei tuoi cari, con lungimiranza.</p>
+        <button type="button" class="btn btn-primary btn-sm">Scopri di più</button>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="assets/sources/pvita1.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Realmente Amore</h5>
+        <p class="card-text">La soluzione specifica per garantire un supporto economico nel momento in cui dovesse venire amancare uno o entrambi i genitori della persona non autosufficiente.</p>
+        <button type="button" class="btn btn-primary btn-sm">Scopri di più</button>
+      </div>
+    </div>
+  </div>
