--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,37 @@
 #logo-div{
     margin-left: 15px;
 }
-
 .sticky {
     position: fixed;
     top: 50px;
 }
-
 #myHeader{
     position: relative;
 }
-
 .top-nav-right{
     float: right;
 }
+.fa {  
+    padding: 5px;  
+  text-align: center;  
+    margin: 5px 2px;  
+    font-size: 20px;  
+    width: 30px;
+    border-radius: 50%;  
+  }  
+  .fa-facebook {  
+    background: #3B5998;  
+    color: white;  
+  }  
+  .fa-twitter {  
+    background: #55ACEE;  
+    color: white;  
+  }  
+  .fa-linkedin {  
+    background: #007bb5;  
+    color: white;  
+  }  
+  .fa-instagram {  
+    background: #cd486b;  
+    color: white;  
+  }
