quasi finito calcolo preventivo

--- a/src/app/registrati/registrati.component.html
+++ b/src/app/registrati/registrati.component.html
@@ -27,7 +27,7 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <label for="lastName" class="form-label">Cognome</label>
+                    <label for="lastName" class="form-label">Data di nascita</label>
                     <input type="date" id="birthday" [(ngModel)]="formUser.birthdate" name="birthday" class="form-control" required>
                     <div class="invalid-feedback">
                       Valid last name is required.
