--- a/src/app/gestionepreventivo/gestionepreventivo.component.html
+++ b/src/app/gestionepreventivo/gestionepreventivo.component.html
@@ -1,5 +1,5 @@
 <table class="table table-striped">
-    <tbody>
+    <tbody> <!-- ciao sono matteo -->
         <tr>
             <th scope="col">Nome</th>
             <td> <p>{{codice["name"]}}</p> </td>
