--- a/src/app/userpage/userpage.component.html
+++ b/src/app/userpage/userpage.component.html
@@ -1,1 +1,87 @@
-<p>userpage works!</p>
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+        <table class="table table-striped">
+            <thead>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="col">Email</th>
+                    <td>
+                        <p> prova {{userEmailFound.email}}</p>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">Password</th>
+                    <td>
+                        <p>{{userEmailFound.password}}</p>
+                    </td>
+                </tr>
+                    <!-- <th scope="col">Tipo</th>
+                    <td>
+                        <p>{{userEmailFound[i].type}}</p>
+                    </td>
+                    <th scope="col">Nome</th>
+                    <td>
+                        <p>{{userEmailFound[i].name}}</p>
+                    </td>
+                    <th scope="col">Cognome</th>
+                    <td>
+                        <p>{{userEmailFound[i].surname}}</p>
+                    </td>
+                    <th scope="col">Sesso</th>
+                    <td>
+                        <p>{{userEmailFound[i].sesso}}</p>
+                    </td>
+                    <th scope="col">Data di nascita</th>
+                    <td>
+                        <p>{{userEmailFound[i].birthdate}}</p>
+                    </td>
+                    <th scope="col">Luogo di Nascita</th>
+                    <td>
+                        <p>{{userEmailFound[i].birth_place}}</p>
+                    </td>
+                    <th scope="col">Codice Fiscale</th>
+                    <td>
+                        <p>{{userEmailFound[i].codice_fiscale}}</p>
+                    </td>
+                    <th scope="col">Telefono</th>
+                    <td>
+                        <p>{{userEmailFound[i].telephone}}</p>
+                    </td>
+                    <th scope="col">Indirizzo</th>
+                    <td>
+                        <p>{{userEmailFound[i].address}}</p>
+                    </td>
+                    <th scope="col">Codice Postale</th>
+                    <td>
+                        <p>{{userEmailFound[i].zip}}</p>
+                    </td>
+                    <th scope="col">Nazione</th>
+                    <td>
+                        <p>{{userEmailFound[i].state}}</p>
+                    </td>
+                    <th scope="col">Regione</th>
+                    <td>
+                        <p>{{userEmailFound[i].region}}</p>
+                    </td>
+                    <th scope="col">Titolo di studio</th>
+                    <td>
+                        <p>{{userEmailFound[i].titolo_studio}}</p>
+                    </td>
+                    <th scope="col">Professione</th>
+                    <td>
+                        <p>{{userEmailFound[i].professione}}</p>
+                    </td>
+                    <th scope="col">Altezza</th>
+                    <td>
+                        <p>{{userEmailFound[i].altezza}}</p>
+                    </td>
+                    <th scope="col">Peso</th>
+                    <td>
+                        <p>{{userEmailFound[i].peso}}</p>
+                    </td>
+                </tr> -->
+            </tbody>
+        </table>
+    </div>
