--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,11 @@
   
 
   <div class="col-md-3 text-end">
-    <button type="button" (click)="redirection()" class="btn btn-outline-primary me-2">Login</button>
+    <button type="button" *ngIf="!isLogged" (click)="redirection()" class="btn btn-outline-primary me-2">Login</button>
+    <button type="button" *ngIf="isLogged" (click)="logOutUser()" class="btn btn-outline-primary me-2">Logout</button>
   </div>
 </header>
+
 
 
 <router-outlet></router-outlet>
