--- a/src/app/calcolo-preventivo/calcolo-preventivo.component.html
+++ b/src/app/calcolo-preventivo/calcolo-preventivo.component.html
@@ -222,7 +222,8 @@
         </div>
         <hr class="my-4">
         <button  (click)="calcolaPreventivo()" [disabled]="!formPreventivo.form.valid" class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button>
-        
+        <!-- <button  (click)="calcolaPreventivo()"  class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button> -->
+
       </div>
 
       <div *ngIf="calcola_pressed==true" class="row row-cols-1 row-cols-md-2 mb-2 text-center">
