--- a/src/app/userpage/userpage.component.html
+++ b/src/app/userpage/userpage.component.html
@@ -8,78 +8,78 @@
                 <tr>
                     <th scope="col">Email</th>
                     <td>
-                        <p> prova {{userEmailFound.email}}</p>
+                        <p>{{this.userLogged.email}}</p>
                     </td>
                 </tr>
                 <tr>
                     <th scope="col">Password</th>
                     <td>
-                        <p>{{userEmailFound.password}}</p>
+                        <p>{{this.userLogged.password}}</p>
                     </td>
                 </tr>
                     <!-- <th scope="col">Tipo</th>
                     <td>
-                        <p>{{userEmailFound[i].type}}</p>
+                        <p>{{userLogged[i].type}}</p>
                     </td>
                     <th scope="col">Nome</th>
                     <td>
-                        <p>{{userEmailFound[i].name}}</p>
+                        <p>{{userLogged[i].name}}</p>
                     </td>
                     <th scope="col">Cognome</th>
                     <td>
-                        <p>{{userEmailFound[i].surname}}</p>
+                        <p>{{userLogged[i].surname}}</p>
                     </td>
                     <th scope="col">Sesso</th>
                     <td>
-                        <p>{{userEmailFound[i].sesso}}</p>
+                        <p>{{userLogged[i].sesso}}</p>
                     </td>
                     <th scope="col">Data di nascita</th>
                     <td>
-                        <p>{{userEmailFound[i].birthdate}}</p>
+                        <p>{{userLogged[i].birthdate}}</p>
                     </td>
                     <th scope="col">Luogo di Nascita</th>
                     <td>
-                        <p>{{userEmailFound[i].birth_place}}</p>
+                        <p>{{userLogged[i].birth_place}}</p>
                     </td>
                     <th scope="col">Codice Fiscale</th>
                     <td>
-                        <p>{{userEmailFound[i].codice_fiscale}}</p>
+                        <p>{{userLogged[i].codice_fiscale}}</p>
                     </td>
                     <th scope="col">Telefono</th>
                     <td>
-                        <p>{{userEmailFound[i].telephone}}</p>
+                        <p>{{userLogged[i].telephone}}</p>
                     </td>
                     <th scope="col">Indirizzo</th>
                     <td>
-                        <p>{{userEmailFound[i].address}}</p>
+                        <p>{{userLogged[i].address}}</p>
                     </td>
                     <th scope="col">Codice Postale</th>
                     <td>
-                        <p>{{userEmailFound[i].zip}}</p>
+                        <p>{{userLogged[i].zip}}</p>
                     </td>
                     <th scope="col">Nazione</th>
                     <td>
-                        <p>{{userEmailFound[i].state}}</p>
+                        <p>{{userLogged[i].state}}</p>
                     </td>
                     <th scope="col">Regione</th>
                     <td>
-                        <p>{{userEmailFound[i].region}}</p>
+                        <p>{{userLogged[i].region}}</p>
                     </td>
                     <th scope="col">Titolo di studio</th>
                     <td>
-                        <p>{{userEmailFound[i].titolo_studio}}</p>
+                        <p>{{userLogged[i].titolo_studio}}</p>
                     </td>
                     <th scope="col">Professione</th>
                     <td>
-                        <p>{{userEmailFound[i].professione}}</p>
+                        <p>{{userLogged[i].professione}}</p>
                     </td>
                     <th scope="col">Altezza</th>
                     <td>
-                        <p>{{userEmailFound[i].altezza}}</p>
+                        <p>{{userLogged[i].altezza}}</p>
                     </td>
                     <th scope="col">Peso</th>
                     <td>
-                        <p>{{userEmailFound[i].peso}}</p>
+                        <p>{{userLogged[i].peso}}</p>
                     </td>
                 </tr> -->
             </tbody>
