--- a/src/app/prodottivita/prodottivita.component.html
+++ b/src/app/prodottivita/prodottivita.component.html
@@ -1,4 +1,4 @@
-<h1 style="color:rgb(24, 94, 148); text-align: center;">I nostri prodotti vita</h1>
+<h1 style="color:rgb(24, 94, 148); text-align: center; padding-top: 20px;">I nostri prodotti vita</h1>
 <br>
 <br>
 <div class="card-group">
