--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -1,3 +1,4 @@
+<div style="padding-top: 20px;">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -52,3 +53,4 @@
 </tr>
   </tbody>
 </table>
+</div>
