--- a/src/app/userpage/userpage.component.html
+++ b/src/app/userpage/userpage.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="padding-top: 20px;">
     <div class="col-lg-6 col-md-6 col-sm-12">
         <table class="table table-striped">
             <thead>
